# test_barter_system

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.dozzle.yml  compose.yml  docker-entrypoint.sh  gunicorn-log.conf  nginx_sample.conf  pyproject.toml
cron/: backup_schedule.py  backup_schedule.sh  crontab_jobs  defender_cleanup.sh
logs/: .gitignore
src/barter/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
src/barter/migrations/: 0001_initial.py  0002_remove_ad_image_url_ad_image.py
src/barter/templates/barter/: ad_confirm_delete.html  ad_detail.html  ad_form.html  ad_list.html  base.html  create_proposal.html  my_ads.html  my_proposals.html
src/settings/: aboba_examples.py  aboba_swagger.py  settings.py  urls.py  views.py
src/user/: admin.py  apps.py  auth_utils.py  forms.py  middleware.py  models.py  urls.py  views.py
src/user/migrations/: 0001_initial.py  0002_alter_customuser_email.py
src/user/templates/user/: login.html  register.html
